--- a/resources/sass/layouts/_header.scss
+++ b/resources/sass/layouts/_header.scss
@@ -1,7 +1,18 @@
 .header {
-    position: fixed;
-     right: 0;
-     bottom: 0;
-     min-width: 100%;
-     min-height: 100%;
+    grid-column: 1 / -1;
+    background-image: url(../../../public/img/header.jpg);
+    background-size: cover;
+    background-position: center;
+
+    display: grid;
+
+    &__text {
+        margin: 320px 250px;
+        text-align: justify;
+
+        &-1 {
+            margin-top: -150px;
+        }
+    }
+
 }
