--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,33 @@
 /* Full grid area variable */
 
+@-webkit-keyframes moveInButton {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(3rem);
+            transform: translateX(3rem);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
+@keyframes moveInButton {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(3rem);
+            transform: translateX(3rem);
+  }
+
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+}
+
 *,
 *::after,
 *::before {
@@ -17,12 +45,128 @@ body {
   padding: 1rem;
 }
 
+.heading-3,
+.heading-2,
+.heading-1 {
+  font-family: "Lato", sans-serif;
+  color: #fff;
+}
+
+.heading-1 {
+  font-size: 4.5rem;
+  line-height: 1;
+}
+
+.heading-2 {
+  font-weight: 600;
+  font-size: 6rem;
+  color: #fff;
+  line-height: 1;
+}
+
+.heading-3 {
+  font-weight: 100;
+  font-style: italic;
+  font-size: 3rem;
+}
+
+.mb-sm {
+  margin-bottom: 2rem;
+}
+
+.mb-md {
+  margin-bottom: 3rem;
+}
+
+.mb-lg {
+  margin-bottom: 5rem;
+}
+
+.mb-hg {
+  margin-bottom: 8rem;
+}
+
 .bg-video__content {
   position: fixed;
   right: 0;
   bottom: 0;
   min-width: 100%;
   min-height: 100%;
+}
+
+.btn {
+  align-self: start;
+  justify-self: start;
+}
+
+.btn,
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 3rem;
+  display: inline-block;
+  border-radius: 5rem;
+  transition: all 0.2s;
+  position: relative;
+  font-size: 1.6rem;
+  border: none;
+  cursor: pointer;
+}
+
+.btn:hover {
+  -webkit-transform: translateY(-0.3rem);
+          transform: translateY(-0.3rem);
+  box-shadow: 0 0.1rem 2rem rgba(0, 0, 0, 0.2);
+}
+
+.btn:hover::after {
+  -webkit-transform: scaleX(1.4) scaleY(1.6);
+          transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn:active,
+.btn:focus {
+  outline: none;
+  -webkit-transform: translateY(-0.1rem);
+          transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+  background-color: #9e9e9e;
+}
+
+.btn--white {
+  background-color: #fff;
+  color: #212121;
+}
+
+.btn--white::after {
+  background-color: #fff;
+}
+
+.btn--animated {
+  -webkit-animation: moveInButton 0.5s ease-out 0.75s;
+          animation: moveInButton 0.5s ease-out 0.75s;
+  -webkit-animation-fill-mode: backwards;
+          animation-fill-mode: backwards;
+}
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.btn__header {
+  position: relative;
+  left: 40%;
 }
 
 .row {
@@ -73,23 +217,27 @@ body {
 }
 
 .header {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
+  grid-column: 1/-1;
+  background-image: url(/images/header.jpg?5743f5904134d6d482225c0d48d9d0a7);
+  background-size: cover;
+  background-position: center;
+  display: grid;
 }
 
-.navigation {
-  color: #757575;
-  box-shadow: 5px 12px 22px -20px #55acee;
+.header__text {
+  margin: 320px 250px;
+  text-align: justify;
+}
+
+.header__text-1 {
+  margin-top: -150px;
 }
 
 .navigation__list {
   display: flex;
   position: relative;
   font-size: 2rem;
-  padding: 0 50px 0;
+  padding: 0 120px 0;
   background-color: #37474f;
 }
 
@@ -105,7 +253,7 @@ body {
   display: inline-flex;
   color: #fff;
   text-decoration: none;
-  padding: 20px;
+  padding: 25px;
   position: relative;
   align-items: center;
 }
@@ -118,7 +266,7 @@ body {
 }
 
 .section-home {
-  background-color: #1a237e;
+  background-color: #fafafa;
 }
 
 .section-articles {
@@ -142,6 +290,10 @@ body {
 }
 
 .section-patreon {
+  background-color: #1a237e;
+}
+
+.footer {
   background-color: #9e9e9e;
 }
 
