--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .section-home {
-    background-color: #1a237e;
+    background-color: $color-grey-light;
 }
 
 .section-articles {
@@ -23,5 +23,9 @@
 }
 
 .section-patreon {
+    background-color: #1a237e;
+}
+
+.footer {
     background-color: #9e9e9e;
 }
