--- a/resources/sass/layouts/_navigation.scss
+++ b/resources/sass/layouts/_navigation.scss
@@ -1,4 +1,10 @@
 .navigation {
+    display: grid;
+    grid-row: 1;
+    grid-column: 1 / 4;
+    z-index: 2;
+    position: sticky;
+    top: 0;
 
     &__list {
         display: flex;
