--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,3 @@
-/* Full grid area variable */
-
 @-webkit-keyframes moveInButton {
   0% {
     opacity: 0;
@@ -49,7 +47,6 @@ body {
 .heading-2,
 .heading-1 {
   font-family: "Lato", sans-serif;
-  color: #fff;
 }
 
 .heading-1 {
@@ -67,7 +64,32 @@ body {
 .heading-3 {
   font-weight: 100;
   font-style: italic;
-  font-size: 3rem;
+  font-size: 3.5rem;
+  color: #fff;
+}
+
+.heading-4 {
+  font-weight: 100;
+  font-size: 2.5rem;
+  color: #fff;
+}
+
+.heading-5 {
+  font-weight: 100;
+  font-size: 1.8rem;
+}
+
+.heading-6 {
+  font-weight: 100;
+  font-size: 1.5rem;
+}
+
+.mt-sm {
+  margin-top: 2rem;
+}
+
+.mt-md {
+  margin-top: 3rem;
 }
 
 .mb-sm {
@@ -167,6 +189,107 @@ body {
 .btn__header {
   position: relative;
   left: 40%;
+}
+
+.wrapper {
+  display: inline-flex;
+  justify-content: center;
+}
+
+.wrapper i {
+  padding: 10px;
+  text-shadow: 0px 6px 8px rgba(0, 0, 0, 0.7);
+  transition: all ease-in-out 150ms;
+}
+
+.wrapper a:nth-child(1) {
+  color: #000;
+}
+
+.wrapper a:nth-child(2) {
+  color: #448aff;
+}
+
+.wrapper a:nth-child(3) {
+  color: #00b0ff;
+}
+
+.wrapper a:nth-child(4) {
+  color: #dd4b39;
+}
+
+.wrapper a:nth-child(5) {
+  color: #4867AA;
+}
+
+.wrapper i:hover {
+  margin-top: -3px;
+  text-shadow: 0px 14px 10px rgba(0, 0, 0, 0.4);
+}
+
+.hr__footer {
+  line-height: 1em;
+  position: relative;
+  outline: 0;
+  border: 0;
+  color: #000;
+  text-align: center;
+  height: 1.5em;
+  opacity: 0.5;
+}
+
+.hr__footer:before {
+  content: "";
+  background: linear-gradient(to right, transparent, #818078, transparent);
+  position: absolute;
+  left: 0;
+  top: 40%;
+  width: 100%;
+  height: 2px;
+}
+
+.hr__footer:after {
+  content: attr(data-content);
+  position: relative;
+  display: inline-block;
+  color: black;
+  padding: 0 0.5em;
+  line-height: 1.5em;
+  color: #818078;
+  background-color: #fafafa;
+}
+
+.ul__footer-list {
+  list-style: none;
+  text-decoration: none;
+  color: #fafafa;
+}
+
+.ul__footer-list a {
+  text-decoration: none;
+  color: #fafafa;
+  text-shadow: 0px 6px 8px rgba(0, 0, 0, 0.7);
+}
+
+.ul__footer-list a:hover,
+.ul__footer-list a:active {
+  color: #bdbdbd;
+}
+
+.copyright {
+  text-align: center;
+  color: #fafafa;
+}
+
+.copyright a {
+  text-decoration: none;
+  color: #fafafa;
+  text-shadow: 0px 6px 8px rgba(0, 0, 0, 0.7);
+}
+
+.copyright a:hover,
+.copyright a:active {
+  color: #bdbdbd;
 }
 
 .row {
