--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -14,15 +14,22 @@ $color-primary-dark: #263238;
 
 // Grey
 $color-grey-light: #fafafa;
+$color-grey-light-2: #bdbdbd;
 $color-grey-medium: #9e9e9e;
+$color-grey-medium-2: #818078;
 $color-grey-dark: #212121;
 
 $color-white: #fff;
 $color-orange: #ef6c00;
 $color-black: #000;
 
-/* Full grid area variable */
-// --fullGrid: 1 / 1 / -1 / -1;
+// Blue
+$color-blue-light: #448aff;
+$color-blue-medium: #00b0ff;
+$color-blue-dark: #4867AA;
+
+// Red
+$color-red: #dd4b39;
 
 // FONT VARIABLES
 $default-font-size: 1.6rem;
