--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -20,7 +20,7 @@ $color-grey-medium-2: #818078;
 $color-grey-dark: #212121;
 
 $color-white: #fff;
-$color-orange: #ef6c00;
+$color-orange: #ffb300;
 $color-black: #000;
 
 // Blue
