--- a/resources/sass/layouts/_footer.scss
+++ b/resources/sass/layouts/_footer.scss
@@ -66,6 +66,10 @@
   }
 }
 
+.content__footer {
+    color: $color-white;
+}
+
 .ul__footer-list {
     list-style: none;
     text-decoration: none;
@@ -74,7 +78,6 @@
 .ul__footer-list a {
     text-decoration: none;
     color: $color-grey-light;
-    text-shadow: 0px 6px 8px rgba(0, 0, 0, 0.7);
 
     &:hover,
     &:active {
