adds style to about section and refactors and commenting to code

--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -1,6 +1,4 @@
-%heading {
-    font-family: $font-display;
-}
+%heading { font-family: $font-display; }
 
 .heading-1 {
     @extend %heading;
@@ -39,6 +37,10 @@
 .mt-sm { margin-top: 2rem; }
 
 .mt-md { margin-top: 3rem; }
+
+.mt-lg { margin-top: 5rem; }
+
+.mt-xl { margin-top: 8rem; }
 
 .mb-sm { margin-bottom: 2rem; }
 
