--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,3 +1,5 @@
+@charset "UTF-8";
+
 @-webkit-keyframes moveInButton {
   0% {
     opacity: 0;
@@ -86,6 +88,14 @@ body {
 
 .mt-md {
   margin-top: 3rem;
+}
+
+.mt-lg {
+  margin-top: 5rem;
+}
+
+.mt-xl {
+  margin-top: 8rem;
 }
 
 .mb-sm {
@@ -187,43 +197,57 @@ body {
   left: 40%;
 }
 
-.wrapper {
+/*  Overall footer style starts here */
+
+.footer {
+  background-color: #424242;
+}
+
+/*  Overall footer style ends here */
+
+/*  Social style starts here */
+
+.footer__social {
   display: inline-flex;
   justify-content: center;
 }
 
-.wrapper i {
+.footer__social i {
   padding: 10px;
   text-shadow: 0px 6px 8px rgba(0, 0, 0, 0.7);
   transition: all ease-in-out 150ms;
 }
 
-.wrapper a:nth-child(1) {
+.footer__social a:nth-child(1) {
   color: #000;
 }
 
-.wrapper a:nth-child(2) {
+.footer__social a:nth-child(2) {
   color: #448aff;
 }
 
-.wrapper a:nth-child(3) {
+.footer__social a:nth-child(3) {
   color: #00b0ff;
 }
 
-.wrapper a:nth-child(4) {
-  color: #dd4b39;
+.footer__social a:nth-child(4) {
+  color: #00897b;
 }
 
-.wrapper a:nth-child(5) {
+.footer__social a:nth-child(6) {
   color: #4867AA;
 }
 
-.wrapper i:hover {
+.footer__social i:hover {
   margin-top: -3px;
   text-shadow: 0px 14px 10px rgba(0, 0, 0, 0.4);
 }
 
-.hr__footer {
+/*  Social style ends here */
+
+/*  Footer divider style starts here */
+
+.footer__divider {
   line-height: 1em;
   position: relative;
   outline: 0;
@@ -234,7 +258,7 @@ body {
   opacity: 0.5;
 }
 
-.hr__footer:before {
+.footer__divider:before {
   content: "";
   background: linear-gradient(to right, transparent, #818078, transparent);
   position: absolute;
@@ -244,7 +268,7 @@ body {
   height: 2px;
 }
 
-.hr__footer:after {
+.footer__divider:after {
   content: attr(data-content);
   position: relative;
   display: inline-block;
@@ -254,6 +278,10 @@ body {
   color: #818078;
   background-color: #fafafa;
 }
+
+/*  Footer divider style ends here */
+
+/*  Content style starts here */
 
 .content__footer {
   color: #fff;
@@ -275,6 +303,10 @@ body {
   color: #bdbdbd;
 }
 
+/*  Content style ends here */
+
+/*  Copyright style starts here */
+
 .copyright {
   text-align: center;
   color: #fafafa;
@@ -290,6 +322,8 @@ body {
 .copyright a:active {
   color: #bdbdbd;
 }
+
+/*  Copyright style ends here */
 
 .row {
   max-width: 114rem;
@@ -415,9 +449,30 @@ body {
   background-color: #ffb300;
 }
 
+/* Overall section style starts here */
+
 .section-home {
   background-color: #fafafa;
 }
+
+/* Overall section style ends here */
+
+/* First quote Style starts here */
+
+.quote {
+  background-color: #fff;
+}
+
+.quote__row {
+  padding: 120px;
+  text-align: center;
+  font-style: italic;
+  font-weight: 100;
+}
+
+/* First quote Style ends here */
+
+/* subscription style starts here */
 
 .subcription {
   background-color: #fff;
@@ -482,9 +537,87 @@ body {
           transform: translateY(2px);
 }
 
-.footer {
-  background-color: #9e9e9e;
+/* subscription style ends here */
+
+/*  About Styles hr in about otim starts here */
+
+.about__divider {
+  overflow: visible;
+  /* For IE */
+  padding: 0;
+  border: none;
+  border-top: medium double #000;
+  color: #000;
+  text-align: center;
+  width: 80%;
+  margin: 0 auto;
 }
+
+.about__divider:after {
+  content: "\A7";
+  display: inline-block;
+  position: relative;
+  top: -0.7em;
+  font-size: 1.5em;
+  padding: 0 0.25em;
+  background: white;
+}
+
+/*  About Styles hr in about otim ends here */
+
+/* Second quote Style starts here */
+
+.quote__divider {
+  border: 0;
+  height: 1.5px;
+  text-align: center;
+  width: 50%;
+  margin: 0 auto;
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+/* Second quote Style ends here */
+
+/* About image Style starts here */
+
+.otim-circle {
+  border-radius: 60%;
+}
+
+/* About image ends here */
+
+/* About social Style ends here */
+
+.about__social {
+  display: inline-flex;
+  justify-content: center;
+}
+
+.about__social i {
+  padding: 10px;
+  color: #000;
+  transition: all ease-in-out 150ms;
+}
+
+.about__social i:hover,
+i:active {
+  margin-top: -3px;
+  color: #9e9e9e;
+  text-shadow: 0px 14px 10px rgba(0, 0, 0, 0.4);
+}
+
+/* About social Style ends here */
+
+/* Second quote Style starts here */
+
+.quote__img {
+  background-image: url(/images/book.jpg?98f787958192dc26cd172da89987ac94);
+  color: #fff;
+  background-attachment: fixed, scroll;
+  background-repeat: no-repeat, repeat-y;
+}
+
+/* Second quote Style ends here */
 
 .section-patreon {
   background-color: #1a237e;
