--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -1,16 +1,7 @@
-// COLORS
 // Blue Grey
 $color-primary: #37474f;
 $color-primary-light: #eceff1;
 $color-primary-dark: #263238;
-
-// //
-// $color-secondary-light: #ffb900;
-// $color-secondary-dark: #ff7730;
-
-//
-// $color-tertiary-light: #2998ff;
-// $color-tertiary-dark: #5643fa;
 
 // Grey
 $color-grey-light: #fafafa;
@@ -18,18 +9,22 @@ $color-grey-light-2: #bdbdbd;
 $color-grey-medium: #9e9e9e;
 $color-grey-medium-2: #818078;
 $color-grey-dark: #212121;
+$color-grey-deep: #424242;
+$color-black: #000;
 
 $color-white: #fff;
 $color-orange: #ffb300;
-$color-black: #000;
+
+// Red
+$color-red: #dd4b39;
 
 // Blue
 $color-blue-light: #448aff;
 $color-blue-medium: #00b0ff;
 $color-blue-dark: #4867AA;
 
-// Red
-$color-red: #dd4b39;
+// Teal
+$color-teal-medium: #00897b;
 
 // FONT VARIABLES
 $default-font-size: 1.6rem;
