--- a/resources/sass/pages/_projects.scss
+++ b/resources/sass/pages/_projects.scss
@@ -1,3 +1,63 @@
 .section-projects {
     background-color: #c0ca33;
 }
+
+.projects__gallery {
+    margin: 1rem 0;
+    column-count: 3;
+    column-gap: 1rem;
+    column-width: 33.33333333333333%;
+}
+
+.projects__gallery-item {
+    transform: scale(0);
+    transition: all 350ms ease;
+}
+
+.projects__gallery-item:hover {
+
+}
+
+.project__animation {
+  transform: scale(1);
+}
+
+.projects__gallery-item img {
+    max-width: 100%;
+    width: 100%;
+    height: auto;
+    margin-bottom: 1rem;
+}
+
+.btn {
+    font-family: Lato;
+    font-size: 1rem;
+    font-weight: normal;
+    text-decoration: none;
+    cursor: pointer;
+    display: inline-block;
+    line-height: normal;
+    padding: .5rem 1rem;
+    margin: 0;
+    height: auto;
+    border: 1px solid;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    color: #555;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.btn:hover {
+  text-decoration: none;
+}
+
+.btn:focus {
+  outline: none;
+  border-color: var(--darken-2);
+  box-shadow: 0 0 0 3px var(--darken-3);
+}
+
+::-moz-focus-inner {
+  border: 0;
+  padding: 0;
+}
