--- a/public/css/app.css
+++ b/public/css/app.css
@@ -192,6 +192,34 @@ body {
   transition: all 0.4s;
 }
 
+.btn__gallery {
+  font-family: Lato;
+  font-size: 1rem;
+  font-weight: normal;
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
+  line-height: normal;
+  padding: 0.5rem 1rem;
+  margin: 0;
+  height: auto;
+  border: 1px solid;
+  vertical-align: middle;
+  -webkit-appearance: none;
+  color: #000;
+  background-color: #fafafa;
+}
+
+.btn__gallery:hover {
+  text-decoration: none;
+}
+
+.btn__gallery:focus {
+  outline: none;
+  border-color: #4867AA;
+  box-shadow: 0 0 0 3px #424242;
+}
+
 .btn__header {
   position: relative;
   left: 40%;
@@ -202,8 +230,6 @@ body {
 .footer {
   background-color: #424242;
 }
-
-/*  Overall footer style ends here */
 
 /*  Social style starts here */
 
@@ -243,8 +269,6 @@ body {
   text-shadow: 0px 14px 10px rgba(0, 0, 0, 0.4);
 }
 
-/*  Social style ends here */
-
 /*  Footer divider style starts here */
 
 .footer__divider {
@@ -279,8 +303,6 @@ body {
   background-color: #fafafa;
 }
 
-/*  Footer divider style ends here */
-
 /*  Content style starts here */
 
 .content__footer {
@@ -303,8 +325,6 @@ body {
   color: #bdbdbd;
 }
 
-/*  Content style ends here */
-
 /*  Copyright style starts here */
 
 .copyright {
@@ -322,8 +342,6 @@ body {
 .copyright a:active {
   color: #bdbdbd;
 }
-
-/*  Copyright style ends here */
 
 .row {
   max-width: 114rem;
@@ -624,7 +642,14 @@ i:active {
 }
 
 .section-projects {
-  background-color: #c0ca33;
+  background-color: #fff;
+  padding: 5rem;
+  text-align: center;
+}
+
+.projects__divider {
+  color: #000;
+  border-bottom: 0;
 }
 
 .projects__gallery {
@@ -641,6 +666,47 @@ i:active {
   -webkit-transform: scale(0);
           transform: scale(0);
   transition: all 350ms ease;
+  position: relative;
+  overflow: hidden;
+  text-align: center;
+}
+
+.projects__gallery-item .mask {
+  display: block;
+  position: absolute;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+
+.projects__gallery-item img {
+  display: block;
+  x-margin-right: auto;
+  x-margin-left: auto;
+  max-width: 100%;
+  width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
+}
+
+.projects__gallery-item h3 {
+  text-align: center;
+  position: relative;
+  padding: 1.8rem;
+  margin: 0rem 0rem 1.5rem 0rem;
+  display: block;
+  background-color: #424242;
+  color: #fff;
+}
+
+.projects__gallery-item p {
+  text-align: center;
+  margin: 1rem;
+}
+
+.projects__gallery-item a.btn__gallery {
+  margin: 3rem 0;
 }
 
 .project__animation {
@@ -648,44 +714,28 @@ i:active {
           transform: scale(1);
 }
 
-.projects__gallery-item img {
-  max-width: 100%;
-  width: 100%;
-  height: auto;
-  margin-bottom: 1rem;
-}
-
-.btn {
-  font-family: Lato;
-  font-size: 1rem;
-  font-weight: normal;
-  text-decoration: none;
-  cursor: pointer;
-  display: inline-block;
-  line-height: normal;
-  padding: 0.5rem 1rem;
-  margin: 0;
-  height: auto;
-  border: 1px solid;
-  vertical-align: middle;
-  -webkit-appearance: none;
-  color: #555;
-  background-color: rgba(0, 0, 0, 0);
-}
-
-.btn:hover {
-  text-decoration: none;
-}
-
-.btn:focus {
-  outline: none;
-  border-color: var(--darken-2);
-  box-shadow: 0 0 0 3px var(--darken-3);
-}
-
 ::-moz-focus-inner {
   border: 0;
   padding: 0;
+}
+
+.mask {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  -webkit-transform: scale(0);
+          transform: scale(0);
+  transition: 0.3s ease;
+}
+
+.projects__gallery-item:hover .mask {
+  -webkit-transform: scale(1);
+          transform: scale(1);
 }
 
 .section-resources {
