--- a/resources/sass/pages/_projects.scss
+++ b/resources/sass/pages/_projects.scss
@@ -1,5 +1,12 @@
 .section-projects {
-    background-color: #c0ca33;
+    background-color: $color-white;
+    padding: 5rem;
+    text-align: center;
+}
+
+.projects__divider {
+    color: $color-black;
+    border-bottom: 0;
 }
 
 .projects__gallery {
@@ -7,57 +14,77 @@
     column-count: 3;
     column-gap: 1rem;
     column-width: 33.33333333333333%;
-}
 
-.projects__gallery-item {
-    transform: scale(0);
-    transition: all 350ms ease;
-}
+    &-item {
+        transform: scale(0);
+        transition: all 350ms ease;
 
-.projects__gallery-item:hover {
+        position: relative;
+        overflow: hidden;
+        text-align: center;
+    }
 
+    &-item .mask {
+       display: block;
+       position: absolute;
+       overflow: hidden;
+       top: 0;
+       left: 0;
+       height: 100%;
+    }
+
+    &-item img {
+        display: block;
+        x-margin-right: auto;
+        x-margin-left: auto;
+        max-width: 100%;
+        width: 100%;
+        height: auto;
+        margin-bottom: 1rem;
+    }
+
+    &-item h3 {
+       text-align: center;
+       position: relative;
+       padding: 1.8rem;
+       margin: 0rem 0rem 1.5rem 0rem;
+       display: block;
+       background-color: $color-grey-deep;
+       color: $color-white;
+    }
+
+    &-item p {
+       text-align: center;
+       margin: 1rem;
+    }
+
+    &-item a.btn__gallery {
+      margin: 3rem 0;
+    }
 }
 
 .project__animation {
   transform: scale(1);
 }
 
-.projects__gallery-item img {
-    max-width: 100%;
-    width: 100%;
-    height: auto;
-    margin-bottom: 1rem;
-}
-
-.btn {
-    font-family: Lato;
-    font-size: 1rem;
-    font-weight: normal;
-    text-decoration: none;
-    cursor: pointer;
-    display: inline-block;
-    line-height: normal;
-    padding: .5rem 1rem;
-    margin: 0;
-    height: auto;
-    border: 1px solid;
-    vertical-align: middle;
-    -webkit-appearance: none;
-    color: #555;
-    background-color: rgba(0, 0, 0, 0);
-}
-
-.btn:hover {
-  text-decoration: none;
-}
-
-.btn:focus {
-  outline: none;
-  border-color: var(--darken-2);
-  box-shadow: 0 0 0 3px var(--darken-3);
-}
-
 ::-moz-focus-inner {
   border: 0;
   padding: 0;
+}
+
+.mask {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #008CBA;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  transform: scale(0);
+  transition: .3s ease;
+}
+
+.projects__gallery-item:hover .mask {
+  transform: scale(1);
 }
