--- a/resources/sass/abstracts/_variables.scss
+++ b/resources/sass/abstracts/_variables.scss
@@ -2,9 +2,13 @@
 $color-primary: #37474f;
 $color-primary-light: #eceff1;
 $color-primary-dark: #263238;
-
+// Blue
+$color-blue-light: #448aff;
+$color-blue-medium: #00b0ff;
+$color-blue-dark: #4867AA;
 // Grey
 $color-grey-light: #fafafa;
+$color-grey-light-1: #e6e6e6;
 $color-grey-light-2: #bdbdbd;
 $color-grey-medium: #9e9e9e;
 $color-grey-medium-2: #818078;
@@ -17,11 +21,6 @@ $color-orange: #ffb300;
 
 // Red
 $color-red: #dd4b39;
-
-// Blue
-$color-blue-light: #448aff;
-$color-blue-medium: #00b0ff;
-$color-blue-dark: #4867AA;
 
 // Teal
 $color-teal-medium: #00897b;
