--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -142,7 +142,7 @@
 
 /* Second quote Style starts here */
 .quote__img {
-  background-image: url(../../../public/img/book.jpg);
+  background-image: url(../img/book.jpg);
   color: $color-white;
   background-attachment: fixed, scroll;
   background-repeat: no-repeat, repeat-y;
