--- a/resources/sass/base/_animations.scss
+++ b/resources/sass/base/_animations.scss
@@ -9,3 +9,10 @@
         transform: translate(0);
     }
 }
+
+@keyframes anim-shadow {
+  to {
+    box-shadow: 0px 0px 60px 25px;
+    opacity: 0;
+  }
+}
