--- a/resources/sass/layouts/_header.scss
+++ b/resources/sass/layouts/_header.scss
@@ -1,6 +1,6 @@
 .header {
     grid-column: 1 / -1;
-    background-image: url(../../../public/img/header.jpg);
+    background-image: url(../img/header.jpg);
     background-size: cover;
     background-position: center;
 
