--- a/resources/sass/pages/_home.scss
+++ b/resources/sass/pages/_home.scss
@@ -6,7 +6,7 @@
 
 /* First quote Style starts here */
 .quote {
-    background-color: $color-white;
+    // background-color: $color-white;
 
     &__row {
         padding: 120px;
