--- a/resources/sass/base/_typography.scss
+++ b/resources/sass/base/_typography.scss
@@ -34,6 +34,19 @@
     font-size: 1.5rem;
 }
 
+.resource-title__heading {
+    text-transform: uppercase;
+    font-size: 2.5rem;
+    padding-top: 2rem;
+}
+
+.mr {
+    text-align: right;
+}
+
+.ml {
+    text-align: left;
+}
 .mt-sm { margin-top: 2rem; }
 
 .mt-md { margin-top: 3rem; }
